# imagewave

./: .gitignore  README.md  imagewave.cabal  stack.yaml
app/: Main.hs
src/: Imagewave.hs
src/Imagewave/: Conversion.hs  Server.hs
