name:                imagewave
version:             0.1.0.0
synopsis:            image manipulation api
description:         image manipulation api
homepage:            https://github.com/tippenein/imagewave#readme
license:             BSD3
license-file:        LICENSE
author:              tippenein
maintainer:          brady@andand.co
copyright:           2016 AndAnd LLC
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Imagewave
    , Imagewave.Server
    , Imagewave.Conversion
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , scotty
    , wai
    , wai-extra
  default-language:    Haskell2010

executable imagewave
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , imagewave
  default-language:    Haskell2010

test-suite imagewave-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , imagewave
    , hspec
    , hspec-wai
    , hspec-wai-json
    , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tippenein/imagewave
